added Joshua Jair Pedrero Gómez to readme

--- a/format.yaml
+++ b/format.yaml
@@ -2,6 +2,7 @@
 title: 'Práctica 3: Cálculo lambda sin tipos'
 author:
 - Luis Daniel Aragón Bermúdez
+- Joshua Jair Pedrero Gómez
 date: 'Miércoles 3 de octubre de 2018'
 bibliography: bibliography.bib
 lang: es
